--- a/roles/deploy/templates/config.yml.j2
+++ b/roles/deploy/templates/config.yml.j2
@@ -1,6 +1,8 @@
 # define in group_vars/all.yml
 
 endpoints:
+  rasbot:
+    webhook: "{{ endpoints.rasbot.webhook }}"
   hosts:
     hosts:
 {% for host in endpoints.hosts.hosts %}
