--- a/roles/front/files/css/style.css
+++ b/roles/front/files/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
 
+* {
+    --color-primary: hsl(204, 100%, 80%);
+    --color-primary-accent: hsl(204, 30%, 50%);
+    --color-secondary: hsl(320, 100%, 85%);
+}
+
 /* Background/Body */
 @keyframes bgscroll
 {
@@ -28,15 +34,40 @@ html
 body
 {
     width: 90%;
-    max-width: 1080px;
-    border-radius: 20px;
+    max-width: 1200px;
+    /* border-radius: 20px; */
     background-color: rgb(14, 14, 14);
     background-size: 50vh 100vh;
     padding-bottom: 10px;
-    animation: body-fadein 0.75s ease forwards;
+    margin: 10px auto;
+    /* animation: body-fadein 0.75s ease forwards; */
 }
 
-@keyframes body-fadein {
+header {
+    margin-left: 20px;
+}
+
+.pagetitle {
+    margin-left: 0px;
+    display: inline-block;
+    padding: 0px 0px;
+    animation-timing-function: linear;
+    animation: wiggle 1.5s alternate ease-in-out infinite;
+}
+
+@keyframes wiggle {
+    0% {
+        transform: rotate(1deg);
+    }
+    50% {
+        transform: rotate(-1deg);
+    }
+    100% {
+        transform: rotate(1deg);
+    }
+}
+
+/* @keyframes body-fadein {
     0%
     {
         opacity: 0%;
@@ -47,40 +78,28 @@ body
         opacity: 100%;
         margin: 10px auto;
     }
-}
+} */
 
 .vertical-divider
 {
     height: 1px;
     margin: 20px 20px;
-    background-color: rgb(153, 153, 153)
+    background-color: var(--color-primary)
+}
+
+.header-divider
+{
+    height: 1px;
+    margin: 20px 20px;
+    margin-top: 0px;
+    background-color: var(--color-primary)
 }
 
 .small-vertical-divider
 {
     height: 1px;
     margin: 20px 20%;
-    background-color: rgb(153, 153, 153)
-}
-
-table,
-tbody
-{
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-}
-
-th
-{
-    background-color: rgb(34, 34, 34);
-    border-radius: 6px;
-}
-
-td
-{
-    background-color: rgb(24, 24, 24);
-    border-radius: 6px;
+    background-color: var(--color-primary)
 }
 
 /* Navigation */
@@ -89,7 +108,6 @@ td
     padding: 5px 0;
     height: 32px;
     display: flex;
-    justify-content: center;
 }
 
 .icon
@@ -102,18 +120,19 @@ td
 
 .navbar
 {
-    padding: 5px 0;
+    padding-top: 5px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
 }
 
 button
 {
     margin: 0 2px;
     width: auto;
-    border: transparent;
-    border-radius: 6px;
+    border-bottom: 2px solid var(--color-primary);
+    border-left: transparent;
+    border-right: transparent;
+    border-top: transparent;
     font-size: 16px;
     background-color: rgb(34, 34, 34);
 }
@@ -193,15 +212,14 @@ th,
 td,
 button
 {
-    text-align:center;
     color:white;
     font-family: 'Source Code Pro', monospace;
-    margin: 0px 10px;
+    margin: 0px 20px;
 }
 
 a
 {
-    color: hsl(240, 50%, 67%);
+    color: var(--color-primary-accent);
     font-weight: bold;
     transition: 0.5s;
     margin: 0px 0px;
@@ -210,7 +228,7 @@ a
 
 a:hover
 {
-    background-color: hsla(240, 36%, 57%, 0.2);
+    background-color: hsl(204, 30%, 50%, 0.2);
     transition: 0.5s;
     cursor: pointer;
 }
@@ -218,31 +236,6 @@ a:hover
 .grey
 {
     color: rgb(84, 84, 84)
-}
-
-/* Name effects */
-.pagetitle
-{
-    overflow: hidden;
-    border-right: 0;
-    white-space: nowrap;
-    margin: 0 auto;
-    letter-spacing: 0.15em;
-    animation:
-        typing 1.5s steps(40, end),
-        blink-caret .75s step-end forwards;
-}
-
-@keyframes typing
-{
-    from
-    {
-        width: 0
-    }
-    to
-    {
-        width: 100%
-    }
 }
 
 .tcolors
