initial prototype of tf2qp: backend

--- a/roles/deploy/templates/config.yml.j2
+++ b/roles/deploy/templates/config.yml.j2
@@ -10,6 +10,7 @@ hosts:
     - ip: "{{ host.ip }}"
       network: "{{ host.network }}"
       region: "{{ host.region }}"
+      has_community_maps: {{ host.has_community_maps }}
       crits: {{ host.crits }}
       spread: {{ host.spread }}
 {% endfor %}
