--- a/roles/deploy/templates/config.yml.j2
+++ b/roles/deploy/templates/config.yml.j2
@@ -13,4 +13,5 @@ hosts:
       has_community_maps: {{ host.has_community_maps }}
       crits: {{ host.crits }}
       spread: {{ host.spread }}
+      alltalk: {{ host.alltalk }}
 {% endfor %}
